manifests/web.manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-web
  template:
    metadata:
      labels:
        app: todo-web
    spec:
      containers:
        - name: todo-web
          image: acrebordemo99.azurecr.io/frontend:latest
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "0.1"
              memory: "500Mi"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-web
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: todo-web
