manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: todo-web
      port:
        number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api0
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
        - path: /api/(.*)
          pathType: ImplementationSpecific
          backend:
            service: 
              name: todo-api
              port: 
                number: 3100
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api1
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1/$2
spec:
  rules:
    - http:
        paths:
        - path: /api/(.*)/(.*)
          pathType: ImplementationSpecific
          backend:
            service: 
              name: todo-api
              port: 
                number: 3100
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /lists
spec:
  rules:
    - http:
        paths:
        - path: /api/lists/undefined
          pathType: Prefix
          backend:
            service: 
              name: todo-api
              port: 
                number: 3100
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api3
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /api
          pathType: Exact
          backend:
            service: 
              name: todo-api
              port: 
                number: 3100
